--- a/posts/2020-12-26-F.A.Q..markdown
+++ b/posts/2020-12-26-F.A.Q..markdown
@@ -1,7 +1,41 @@
 ---
 title: F.A.Q.
-abstract: My try to answer all questions about what is really happening on this site.
+abstract: Why Hakyll? Why Courier New? How to replicate? And some other questions asnwered here.
 author: Me
 important: really
 ---
-Not yet
+
+1. **Why Hakyll?**
+
+Well, I believe that one day I will write my own static site generator, but until
+that moment I have to use some tools written by other people. [Hakyll](https://jaspervdj.be/hakyll/) 
+is [Jekyll](https://jekyllrb.com) made and configured with Haskell obviously.
+I thought that is a great chance to practice some Haskell; however, I changed
+default configuration very slightly.
+
+2. **Why Courier New?**
+
+I understand that is difficult sometimes to ready long texts with this font.
+I wanted to use Roboto Mono as I always do, but I accidentally decided to try
+Courier New and really loved it from the very first character.
+
+3. **How to replicate this design?**
+
+All the sources can be found [here](https://github.com/m8dotpie/m8blog).
+
+What I have done to create this blog?
+
+    - Generated Hakyll template site
+    - Changed navigation bar to responsive one (just copy-pasted from guide)
+    - Changed color of navigation bar to stylish black
+    - Polished some colors, margins, sizes and paddings
+    - Changed index.html to main blog list
+    - Made some modifications like "important" posts and etc
+
+The most difficult part was to make Hakyll work on Mac. One of packages
+relied on standard frameworks like Cocoa and etc; however, on MacOS 11 (Big Sure)
+there is a problem accessing them. So there is no way to use it with haskell stack 
+package manager (unless you comment packages it can't compile). The only way
+is cabal package manager.
+
+4. **Some other questions answered here.**
